# ugc_sprint_1

./: .env.example  .gitignore  README.md  docker-compose-actions.yml  docker-compose-elk.yml  docker-compose.yml  setup.cfg  test.env
.github/workflows/: blank.yml
architecture/: AS_IS_architecture.drawio  TO_BE_architecture.drawio  is_as.puml  to_be.puml
elk-deploy/: filebeat.yml  logstash.conf  nginx
etl/: Dockerfile  entrypoint.sh  pyproject.toml
etl/src/: clickhouse_client.py  config.py  extractor.py  loader.py  logger.py  main.py  models.py  pipline.py  transformer.py
etl/src/state/: json_file_storage.py  models.py
etl/utils/: wait_for_clickhouse.py  wait_for_kafka.py
kafka_to_mongo/: Dockerfile  entrypoint.sh  pyproject.toml
kafka_to_mongo/src/: config.py  extractor.py  loader.py  logger.py  main.py  models.py  pipline.py  transformer.py
kafka_to_mongo/utils/: wait_for_kafka.py  wait_for_mongo.py
metrics/clickhouse/: README.md  generate_fake_data.py  metrics.py
metrics/mongo_pg/: README.md  docker-compose.yaml  env.example
metrics/vertica/: README.md  docker-compose.yml  generate_fake_data.py  metrics.py
nginx/: nginx.conf
nginx/nginx_config/: site.conf
ugc_api/: Dockerfile  entrypoint.sh  pyproject.toml
ugc_api/src/: client_kafka.py  main.py
ugc_api/src/api/v1/: events.py  likes.py  rating.py  reviews.py  watchlist.py
ugc_api/src/clients/: admin_client_kafka.py  api_client.py  api_session.py
ugc_api/src/core/: config.py  exceptions.py
ugc_api/src/db/: kafka.py  mongo.py  mongo_storage.py
ugc_api/src/models/: click_info.py  film_progress.py  film_quality.py  filter.py  likes.py  rating.py  response_message.py  reviews.py  user.py  watchlist.py
ugc_api/src/producers/: abstract_producer.py  kafka_producer.py  mongo_producer.py
ugc_api/src/services/: base_service.py  click_tracking_service.py  filter_service.py  likes.py  produce_film_quality_service.py  rating_service.py  reviews_service.py  watching_film_service.py  watchlist_service.py
ugc_api/src/utils/: average_film_rating.py  check_auth.py  messages.py
ugc_api/utils/: wait_for_kafka.py
(+19 files in other folders)
